--- a/Web-2020-PJ1/index.html
+++ b/Web-2020-PJ1/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport"content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no" />
+        <meta name="viewport"content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no">
         <link rel="stylesheet" href="./src/css/reset.css" media="all">
         <link rel="stylesheet" href="./src/css/style-login.css" media="all">
         <link rel="stylesheet" href="./src/css/footer.css" media="all">
@@ -18,7 +18,7 @@
                 <p>Username/E-mail:</p>
                 <input type="text" name="username" required>
                 <p>Password:</p>
-                <input type="text" name="password" required>
+                <input type="password" name="password" required>
                 <a href="./src/home.html"><button class="button" type="submit"><span>Sign In</span></button></a>
             </div>
         </div>
