--- a/Web-2020-PJ1/src/register.html
+++ b/Web-2020-PJ1/src/register.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport"content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no" />
+        <meta name="viewport"content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no">
         <link rel="stylesheet" href="./css/reset.css" media="all">
         <link rel="stylesheet" href="./css/style-login.css" media="all">
         <link rel="stylesheet" href="./css/footer.css" media="all">
@@ -11,7 +11,7 @@
     <body>
         <div class="head">
             <img src="../img/logo.jpg">
-            <p>Sign In</p>
+            <p>Register</p>
         </div>
         <div class="form">
             <form class="formform" action="../index.html" method="GET">
