--- a/Web-2020-PJ1/src/search.html
+++ b/Web-2020-PJ1/src/search.html
@@ -3,7 +3,7 @@
     <head>
         <head>
             <meta charset="UTF-8">
-            <meta name="viewport"content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no" />
+            <meta name="viewport"content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no">
             <link rel="stylesheet" href="./css/reset.css" media="all">
             <link rel="stylesheet" href="./css/header.css" media="all">
             <link rel="stylesheet" href="./css/style-search.css" media="all">
@@ -25,10 +25,10 @@
                         <p>My account<img src="../img/myaccount.png"></p>
                     </a>
                     <div class="dropdown-content">
-                        <a href="./upload.html">Upload</a>
-                        <a href="./myphoto.html">My Photo</a>
-                        <a href="./favor.html">My Favourite</a>
-                        <a href="../index.html">Login</a>
+                        <a href="./upload.html"><img src="../img/upload.png">Upload</a>
+                        <a href="./myphoto.html"><img src="../img/pic.png">My Photo</a>
+                        <a href="./favor.html"><img src="../img/favor.png">Favourite</a>
+                        <a href="../index.html"><img src="../img/login.png">Login</a>
                     </div>
                 </div>
             </header>
